{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 292,
  "lineage": "ac4a420b-00f9-0133-f8ef-468a8610164f",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "persistence",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "persistence",
            "metadata": [
              {
                "generation": 0,
                "name": "persistence",
                "resource_version": "615",
                "uid": "559b0442-d5c6-436c-97ec-5d25d051ec4f"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "surface",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "surface",
            "metadata": [
              {
                "generation": 0,
                "name": "surface",
                "resource_version": "626",
                "uid": "0f3cdc13-c7ef-4d57-a523-775cd3338f1a"
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.api.module.base",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "surface/api-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$1"
                },
                "generate_name": "",
                "generation": 3,
                "labels": {},
                "name": "api-ingress",
                "namespace": "surface",
                "resource_version": "5158",
                "uid": "a0c185e3-8ff8-40e8-a161-696a3b04b480"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "api",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8000
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/api/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api.module.base.kubernetes_service.service",
            "module.api.null_resource.build"
          ]
        }
      ]
    },
    {
      "module": "module.api.module.base",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "surface/api",
            "metadata": [
              {
                "generation": 0,
                "name": "api",
                "namespace": "surface",
                "resource_version": "5604",
                "uid": "0354c182-d83c-4627-8b7c-f5c2a6f62bc5"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.170.70",
                "cluster_ips": [
                  "10.100.170.70"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8000,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "parent": "api"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.api.null_resource.build"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.base",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "surface/frontend-ingress",
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/$1"
                },
                "generate_name": "",
                "generation": 2,
                "labels": {},
                "name": "frontend-ingress",
                "namespace": "surface",
                "resource_version": "1730",
                "uid": "03ecfba3-6705-47e1-ae2e-540d68a8491d"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "frontend",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "192.168.49.2"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.frontend.module.base.kubernetes_service.service",
            "module.frontend.null_resource.build"
          ]
        }
      ]
    },
    {
      "module": "module.frontend.module.base",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "surface/frontend",
            "metadata": [
              {
                "generation": 0,
                "name": "frontend",
                "namespace": "surface",
                "resource_version": "5602",
                "uid": "31fd55db-347c-4146-a657-77c35da2d427"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.101.180.200",
                "cluster_ips": [
                  "10.101.180.200"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "parent": "frontend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.frontend.null_resource.build"
          ]
        }
      ]
    },
    {
      "module": "module.mongo",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "persistence/mongo",
            "metadata": [
              {
                "generation": 0,
                "name": "mongo",
                "namespace": "persistence",
                "resource_version": "5600",
                "uid": "746b387f-4ce7-49a5-ba27-18e60fa88518"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.110.65.35",
                "cluster_ips": [
                  "10.110.65.35"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "parent": "mongo"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          }
        }
      ]
    }
  ]
}